--- a/index.html
+++ b/index.html
@@ -1747,7 +1747,7 @@
                         <li><a href="#" class="hover:text-white transition-colors">Contact</a></li>
                         <li><a href="privacy-policy.html" class="hover:text-white transition-colors">Privacy Policy</a></li>
                         <li><a href="terms-of-service.html" class="hover:text-white transition-colors">Terms of Service</a></li>
-                        <li><a href="advanced-admin.html?v=2" class="hover:text-white transition-colors">Admin</a></li>
+                        <li><a href="admin.html" class="hover:text-white transition-colors">Admin</a></li>
                     </ul>
                 </div>
                 
