--- a/index.html
+++ b/index.html
@@ -1752,7 +1752,7 @@
                 <div>
                     <h4 class="font-semibold mb-4">Developer</h4>
                     <div class="flex items-center space-x-3 mb-4">
-                        <img src="assets/amit-photo.jpg" alt="Amit Kumar Sahu" class="w-12 h-12 rounded-full border-2 border-indigo-400">
+                        <img src="C:/Users/Kumar/Desktop/New folder/123.jpg" alt="Amit Kumar Sahu" class="w-12 h-12 rounded-full border-2 border-indigo-400 object-cover">
                         <div>
                             <h5 class="font-semibold text-white">Amit Kumar Sahu</h5>
                             <p class="text-sm text-gray-400">Site Developer</p>
