--- a/weekly-gaming-news.html
+++ b/weekly-gaming-news.html
@@ -333,7 +333,7 @@
     <footer class="mt-16 py-8 border-t" style="border-color: var(--border-color); background-color: var(--bg-secondary);">
         <div class="container mx-auto px-4">
             <div class="text-center">
-                <p style="color: var(--text-secondary);">© 2024 Respawn Daily. All rights reserved.</p>
+                <p style="color: var(--text-secondary);">&copy; 2026 Respawn Daily. All rights reserved.</p>
                 <p class="text-sm mt-2" style="color: var(--text-tertiary);">🎮 Your weekly source for gaming news and updates</p>
             </div>
         </div>
